Projeto de layout dasafio front-end junior

--- a/desafio-codeby/src/index.html
+++ b/desafio-codeby/src/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/home.css">
-    <link rel="stylesheet" href="/public/categories.css">
-    <link rel="stylesheet" href="/public/stats.css">
+    <link rel="stylesheet" href="/desafio-codeby/public/home.css">
+    <link rel="stylesheet" href="/desafio-codeby/public/categories.css">
+    <link rel="stylesheet" href="/desafio-codeby/public/stats.css">
     <title>Teste</title>
 </head>
 <body>
     <div class="home">
-        <img src="/img/montanha.png" alt="fundo">
-        <img src="/img/mountains-white.png" alt="logo">
+        <img src="/desafio-codeby/img/montanha.png" alt="fundo">
+        <img src="/desafio-codeby/img/mountains-white.png" alt="logo">
         <p>ESCALATOR</p>
         <h1>we have ideas to <br/> growth your business</h1>
         <button>SEE NOW</button>
@@ -25,31 +25,31 @@
     <div class="categories">
 
         <div class="images img1">
-            <img src="/img/img1.jpg" alt="imagem 1">
+            <img src="/desafio-codeby/img/img1.jpg" alt="imagem 1">
             <h1>Nature</h1>
             <p>Lorem ipsum dolor sit.</p>
         </div>
 
         <div class="images img2">
-            <img src="/img/img2.jpg" alt="imagem 2">
+            <img src="/desafio-codeby/img/img2.jpg" alt="imagem 2">
             <h1>Daily</h1>
             <p>Lorem ipsum dolor sit.</p>
         </div>
 
         <div class="images img3">
-            <img src="/img/img4.jpg" alt="imagem 3">
+            <img src="/desafio-codeby/img/img4.jpg" alt="imagem 3">
             <h1>Together</h1>
             <p>Lorem ipsum dolor sit. Lorem ipsum dolor sit.</p>
         </div>
 
         <div class="images img4">
-            <img src="/img/img3.jpg" alt="imagem 4">
+            <img src="/desafio-codeby/img/img3.jpg" alt="imagem 4">
             <h1>Analisys</h1>
             <p>Lorem ipsum dolor. Lorem ipsum dolor.</p>
         </div>
 
         <div class="images img5">
-            <img src="/img/img5.jpg" alt="imagem 5">
+            <img src="/desafio-codeby/img/img5.jpg" alt="imagem 5">
             <h1>Pictures</h1>
             <p>Lorem ipsum dolor sit.</p>
         </div>
