--- a/layout#002/index.html
+++ b/layout#002/index.html
@@ -14,6 +14,7 @@
         <img src="/img/cloud(1).png" alt="nuvem">
         <img src="/img/cloud.png" alt="nuvem">
         <img src="/img/cloud.png" alt="nuvem">
+        <img src="/img/cloud.png" alt="nuvem">
     </div>
 
     <div class="bg-bottom">
@@ -31,38 +32,42 @@
             <div class="card1">
 
                 <div class="field">
-                    <input type="radio" name="Paypal">
+                    <input type="radio" name="credit">
                     <!-- <label for="Paypal">PayPal Logo --><table border="0" cellpadding="10" cellspacing="0" align="center"><tbody><tr><td align="center"></td></tr><tr><td align="center"><a href="https://www.paypal.com/pt/webapps/mpp/home" title="PayPal Comment Ca Marche" onclick="javascript:window.open('https://www.paypal.com/pt/webapps/mpp/home','WIPaypal','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1060, height=700'); return false;"><img src="https://www.paypalobjects.com/webstatic/mktg/Logo/pp-logo-100px.png" border="0" alt="PayPal Logo" /></a></td></tr></tbody></table><!-- PayPal Logo</label> -->
                 </div>
 
                 <div class="field">
                     <input type="radio" name="credit">
                     <label for="credit">Cartão de Credito ou Débito</label>
-                    <!-- <img src="/img/Mastercard Symbol - SVG - BR/Artwork/mc_symbol.svg" alt=""> -->
+                    <img src="/img/visa.png" alt="">
+                    <img src="/img/master.png" alt="">
+                    <img src="/img/american.png" alt="">
+                    <img src="/img/maestro.png" alt="">
+                    
                 </div>
 
                 <div class="field">
-                    <label for="Numero cartao">Numero do Cartão</label>
-                    <input type="text" name="Numero cartao">
+                    <label for="Numero cartao"> Numero do Cartão</label>
+                    <input placeholder="💳  0000 0000 0000 0000" type="text" name="Numero cartao">
                 </div>
 
                 <div class="expire">
 
                     <div class="field">
                         <label for="Validade">Validade</label>
-                        <input type="text" name="Validade">
+                        <input type="date" name="Validade">
                     </div>
 
                     <div class="field">
-                        <label for="Cod seguranca">Código de Segurança</label>
-                        <input type="text" name="Cod seguranca">
+                        <label for="Cod seguranca">CVV</label>
+                        <input placeholder="🔒 &bull; &bull; &bull;" type="text" name="Cod seguranca">
                     </div>
 
                 </div>
 
                 <button>Cadastrar</button>
 
-                <p>Sua transação é protegida com criptografia SSL</p>
+                <p><img src="/img/fechadura.png" alt="lock" class="lock"> Sua transação é protegida com criptografia SSL</p>
 
             </div>
 
